examples/positive/helloworld.nv
fn main() : void {
    print_str("hello world");
    return;
}
