examples/negative/assign_undefined_variable.nv
fn main() : void {
    a = 1;
    return;
}
